# KK_L2

./: .gitignore  CMakeLists.txt  KK_GR_A_LAB_2_PATRYK_GRZYWACZ.md
.run/: bruteForce Affine.run.xml  bruteForce Cesar light.run.xml  bruteForce Cesar.run.xml  decrypt Affine.run.xml  decrypt Cesar.run.xml  encrypt Affine.run.xml  encrypt Cesar.run.xml
data/: in_decrypted_test.txt  in_encrypted.txt  in_encrypted_affine.txt  in_encrypted_light.txt  keys_affine.txt
src/: AffineCoder.cpp  App.cpp  Arguments.cpp  CesarCoder.cpp  Coder.cpp  FileService.cpp  NgramsUtil.cpp  main.cpp
src/headers/: AffineCoder.h  App.h  Arguments.h  CesarCoder.h  Coder.h  FileService.h  Libraries.h  NgramsUtil.h
